--- a/InstagramClone/Base.lproj/Main.storyboard
+++ b/InstagramClone/Base.lproj/Main.storyboard
@@ -10,7 +10,6 @@
         <!--Tab Bar Controller-->
         <scene sceneID="R6Y-fG-mkq">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6Wd-mp-mtj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tabBarController id="J2s-63-1oL" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RKG-wc-c5r">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
@@ -26,6 +25,7 @@
                         <segue destination="9Gc-Mj-3VE" kind="relationship" relationship="viewControllers" id="68k-B5-zg5"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Wd-mp-mtj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-530" y="121"/>
         </scene>
@@ -100,7 +100,7 @@
         <scene sceneID="EnH-Nv-rEe">
             <objects>
                 <navigationController id="a11-zd-76B" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="bell" catalog="system" id="jnQ-Gg-Bcv"/>
+                    <tabBarItem key="tabBarItem" title="" image="heart" catalog="system" id="jnQ-Gg-Bcv"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FsR-Kl-HcN">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -196,7 +196,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bell" catalog="system" width="128" height="124"/>
+        <image name="heart" catalog="system" width="128" height="109"/>
         <image name="house" catalog="system" width="128" height="110"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="person" catalog="system" width="128" height="117"/>
